--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ extend-exclude = [".cache"]
 line-length = 120
 select = ["ANN", "B", "C4", "D", "DTZ", "E", "F", "ISC", "INT", "N", "PGH", "PIE", "Q", "RET", "RSE", "RUF", "S", "SIM", "T20", "TID", "UP", "W"]
 ignore = [
-    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
+    "ANN002", "ANN003", "ANN101", "ANN102", "ANN201", "ANN204", "ANN206", "ANN401",
     "B904",
     "C401", "C408",
-    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
+    "D100", "D101", "D102", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
     "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
     "E731",
     "Q000",
@@ -23,4 +23,5 @@ ignore = [
     "RUF005",
     "S311",
     "SIM102", "SIM108",
+    "UP015",
 ]
