--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,26 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+certifi = "==2023.5.7"
+cfgv = "==3.3.1"
+distlib = "==0.3.6"
+filelock = "==3.12.0"
+identify = "==2.5.24"
+isort = "==5.12.0"
+nodeenv = "==1.8.0"
+numpy = "==1.25.2"
+pillow = "==10.0.0"
+pipenv = "==2023.6.2"
+platformdirs = "==3.5.1"
+pre-commit = "==3.3.2"
+pycodestyle = "==2.10.0"
+pyflakes = "==3.0.1"
+pyyaml = "==6.0"
+ruff = "==0.0.285"
+virtualenv = "==20.23.0"
+virtualenv-clone = "==0.5.7"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.3"
